name:                liqpad
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/liqpad#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
--build-type:          Simple
build-type:          Custom
extra-source-files:  README.md
cabal-version:       >=1.10

custom-setup
  setup-depends: base, Cabal, liquidhaskell-cabal >= 0.1.1

flag liquidhaskell
  description: After building, verify with LiquidHaskell
  default:     False

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , liquidhaskell-cabal >= 0.1.1
  default-language:    Haskell2010

executable liqpad-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , liquidhaskell-cabal >= 0.1.1
                     , liqpad
  default-language:    Haskell2010

test-suite liqpad-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , liquidhaskell-cabal >= 0.1.1
                     , liqpad
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/liqpad
